--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,4 +19,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: python -B -m pytest -v
+        run: cd pydantic-service; python -B -m pytest -vv
