--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,4 +22,4 @@ jobs:
         run:
           set -x
           cd pydantic-service
-          python -B -m pytest -vv
+          python -B -m pytest -v
