--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,7 +19,5 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run:
-          set -x
-          cd pydantic-service
-          python -B -m pytest -v
+        working-directory: ./pydantic-service
+        run: python -B -m pytest -v
