--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,5 +19,5 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        working-directory: ./pydantic-service
+        working-directory: pydantic-service
         run: python -B -m pytest -v
