--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,5 +19,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        working-directory: pydantic-service
-        run: python -B -m pytest -v
+        run: cd pydantic-service && python -B -m pytest -v
