--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,4 +19,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: cd pydantic-service && python -B -m pytest -v
+        run: |
+          echo pwd
+          cd pydantic-service
+          python -B -m pytest -v
