--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,7 +19,8 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
+        shell: bash
         run: |
-          echo pwd
+          echo $PWD
           cd pydantic-service
           python -B -m pytest -v
