--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Run tests
         shell: bash
+        working-directory: ./pydantic-service
         run: |
           echo $PWD
-          cd pydantic-service
+          ls
           python -B -m pytest -v
