--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,6 +19,6 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          cd pydantic-service
-          python -B -m pytest -v
+        shell: bash
+        run: python -B -m pytest -v
+          working-directory: pydantic-service
