--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run tests
         shell: bash
-        run:
+        run: |
           set -x
           cd pydantic-service
           echo $PWD
