--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,13 +12,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get changed py files
-        id: changed-py-files
-        uses: tj-actions/changed-files@v41
-        with:
-          path: ../pydantic-service
-          files: |
-            **.py
+      # - name: Get changed py files
+      #   id: changed-py-files
+      #   uses: tj-actions/changed-files@v41
+      #   with:
+      #     path: ../pydantic-service
+      #     files: |
+      #       **.py
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -34,7 +34,7 @@ jobs:
         run: |
           set -x
           echo $PWD
-          cd pydantic-service
+          cd ../pydantic-service
           echo $PWD
           python -B -m pytest -v
 
