--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,11 +30,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        shell: bash
         run: |
-          set -x
+          set +x
           echo $PWD
-          cd ../pydantic-service
+          cd pydantic-service
           echo $PWD
           python -B -m pytest -v
 
