--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Run tests
         run: |
+          echo "pwd:" $PWD
           cd ../../pydantic-service
           echo $PWD
           python -B -m pytest -v
