--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -33,7 +33,14 @@ jobs:
         run: |
           echo "pwd:" $PWD
           ls
+          cd /home/runner/work/pydantic-example/pydantic-example
+          echo "pwd:" $PWD
+          ls
           cd /home/runner/work/pydantic-example
+          echo "pwd:" $PWD
+          ls
+          cd /home/runner/work
+          echo "pwd:" $PWD
           ls
           echo "pwd:" $PWD
           python -B -m pytest -v
