--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -42,7 +42,12 @@ jobs:
           cd /home/runner/work
           echo "pwd:" $PWD
           ls
+          cd /home/runner
           echo "pwd:" $PWD
+          ls
+          cd /home
+          echo "pwd:" $PWD
+          ls
           python -B -m pytest -v
 
         # with:
