--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,18 +30,18 @@ jobs:
           fi
 
       - name: Setup Python
-        if: ${{ steps.changed-py-files.outputs.any_changed }}
+        if: "${{ steps.changed-py-files.outputs.any_changed == 'true' }}"
         uses: actions/setup-python@v4
         with:
           python-version: 3.11.6
           cache: pip
 
       - name: Install requirements
-        if: ${{ steps.changed-py-files.outputs.any_changed }}
+        if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
         run: pip install -r requirements.txt
 
       - name: Run tests
-        if: ${{ steps.changed-py-files.outputs.any_changed }}
+        if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
         run: |
           ls
           cd pydantic-service
