--- a/.github/workflows/check_format.yml
+++ b/.github/workflows/check_format.yml
@@ -6,8 +6,29 @@ jobs:
   black:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: psf/black@stable
+      - name: Checkout repo
+        uses: actions/checkout@v4.1.1
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+          path: ./pydantic-service
+          files: |
+            **.py
+
+      - name: List changed files
+        shell: bash
+        run: |
+          if [[ "${{ steps.changed-files.outputs.any_changed }}" == "true" ]]; then
+            echo "Changes found in: ${{ steps.changed-files.outputs.all_changed_files }}"
+          else
+            echo "No files to check, will skip further steps"
+          fi
+
+      - name: Check format - black
+        if: "${{ steps.changed-files.outputs.any_changed == 'true' }}"
+        uses: psf/black@stable
         with:
           options: "--check --verbose --line-length=135"
           # src: "./tests"
