--- a/pydantic-service/pyproject.toml
+++ b/pydantic-service/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.8"
 pytest = "^8.2.2"
 icecream = "^2.1.3"
+pydantic = {extras = ["email"], version = "^2.7.4"}
 
 
 [build-system]
