--- a/.github/workflows/run_tests_poetry.yml
+++ b/.github/workflows/run_tests_poetry.yml
@@ -29,21 +29,26 @@ jobs:
             echo "No files to check, will skip further steps"
           fi
 
-#       - name: Setup Python
-#         if: "${{ steps.changed-py-files.outputs.any_changed == 'true' }}"
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: 3.11.6
-#           cache: pip
+      - name: Setup Python
+        if: "${{ steps.changed-py-files.outputs.any_changed == 'true' }}"
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11.6
+          cache: pip
 
-#       - name: Install requirements
-#         if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
-#         run: pip install -r requirements.txt
+      - name: Install requirements
+        if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
+        run: |
+          cd pydantic-service
+          pip install poetry==1.6.1
+          poetry --version && poetry env info && poetry config --list
+          poetry install --no-interaction --no-ansi
 
-#       - name: Run tests
-#         if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
-#         run: |
-#           ls
-#           cd pydantic-service
-#           echo "pwd:" $PWD
-#           python -B -m pytest -v
+
+      - name: Run tests
+        if: ${{ steps.changed-py-files.outputs.any_changed == 'true' }}
+        run: |
+          ls
+          cd pydantic-service
+          echo "pwd:" $PWD
+          python -B -m pytest -v
