--- a/.github/workflows/run_tests_poetry.yml
+++ b/.github/workflows/run_tests_poetry.yml
@@ -1,4 +1,4 @@
-name: Run pytest
+name: Run pytest poetry
 on:
   push:
     branches:
@@ -42,6 +42,7 @@ jobs:
           cd pydantic-service
           pip install poetry==1.6.1
           poetry --version && poetry env info && poetry config --list
+          poetry config virtualenvs.create false
           poetry install --no-interaction --no-ansi
 
 
